[package]
name = "aoc"
version = "0.1.0"
authors = ["foo-jin <frank.049@hotmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.5"
structopt = "0.2.13"
failure = "0.1.3"
chrono = "0.4.6"
maplit = "1.0.1"
scraper = "0.8.1"
serde_derive = "1.0.80"
toml = "0.4.9"
serde = "1.0.80"
serde_json = "1.0.33"
prettytable-rs = "0.8.0"
